--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -1,2 +1,2 @@
-<!--pages/profile.wxml-->
-<text>pages/profile.wxml</text>
+<!--miniprogram/pages/profile/profile.wxml-->
+<text>miniprogram/pages/profile/profile.wxml</text>
