--- a/miniprogram/pages/discover/discover.wxml
+++ b/miniprogram/pages/discover/discover.wxml
@@ -1,2 +1,2 @@
-<!--pages/discover/discover.wxml-->
-<text>pages/discover/discover.wxml</text>
+<!--miniprogram/pages/discover/discover.wxml-->
+<text>miniprogram/pages/discover/discover.wxml</text>
