--- a/miniprogram/pages/message/message.wxml
+++ b/miniprogram/pages/message/message.wxml
@@ -1,2 +1,2 @@
-<!--pages/message/message.wxml-->
-<text>pages/message/message.wxml</text>
+<!--miniprogram/pages/message/message.wxml-->
+<text>miniprogram/pages/message/message.wxml</text>
