--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -154,3 +154,13 @@ page {
   line-height: 36rpx;
   word-break: break-all;
 }
+
+.top_right {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.overlap_container {
+  position: relative;
+}
